[package]
name = "bende"
version = "0.5.1"

authors = [
    "Rick <rickz75dev@gmail.com>",
    "Halfnelson <ewoudvanrooyen@gmail.com>",
]
description = "A bencode encoding/decoding implementation backed by serde."

categories = ["encoding", "network-programming"]
keywords = ["bencode", "serialize", "deserialize", "torrent", "bittorrent"]

homepage = "https://github.com/Rickz75/bende"
repository = "https://github.com/Rickz75/bende"

license = "MIT"
publish = true

edition = "2021"

[dependencies]
serde = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
